# adj-verb-extractor

./: COPYING  README.md  pyproject.toml
depictivestr/: __init__.py  __main__.py  extractor.py
